--- a/WPF_FrontEnd/WPF_FrontEnd.csproj
+++ b/WPF_FrontEnd/WPF_FrontEnd.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="docfx.console" Version="2.59.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
